Mega Menu fixed - tall image text gap

--- a/MasterStyleCSS/MasterStyle.css
+++ b/MasterStyleCSS/MasterStyle.css
@@ -79,7 +79,7 @@ i{
     line-height: 1.3;
 }
 
-/* RELATED PRODUCTS WIDGET JMRV 060116*/
+/* RELATED PRODUCTS WIDGET JMRV - Pushed 070516*/
 .br-rp-qv-show{
     width: 100%;
     bottom: 30%;
@@ -279,6 +279,18 @@ br{
 }
 
 /* ------------------------------  CONTENT BLOCKS CONTAINERS  ------------------------------ */
+
+/*MEGAMENUS*/
+.navigation-content-block--2-small-tall .navigation-content-block__item--tall-image{
+    margin-right:1%;
+}
+.navigation-content-block--tall-2-small .navigation-content-block__item--tall-image{
+    margin-right:3%;
+}
+.navigation-content-block__item--tall-image{
+    max-width: 210px;    
+}
+
 
 /* ALL CONTENT BLOCK MOBILE*/
 .content-block-content__container--center,
